[package]
name = "transafe-server"
version = "0.1.0"
authors = ["thomasfire"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0.*"}
actix-rt = "1.0.0"
serde = "1.0.*"
rust-crypto = "0.2.*"
futures = "0.3.1"
serde_derive = "1.0.*"
diesel = { version = "1.4.3", features = ["sqlite", "r2d2", "chrono"] }
chrono = "0.4.*"
rand = "0.7.2"
aes = "0.3.2"
base64 = "0.12.0"
toml = "0.5.6"
